--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -14,10 +14,9 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version &nbsp;0.1.17 (18/09/2009)</h1>
+<h1>Version &nbsp;0.1.18 (19/09/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte beaucoup de bugs. Vous trouverez
@@ -50,18 +49,17 @@ informations (typiquement la catégorie).</li>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li><span class="bugFix">Correction de bug </span>
-: L'authentification sur le serveur mandataire (proxy) ne fonctionnait
-pas.</li>
-<li><span class="bugFix">Correction de bug </span>
-: Quand un compte était créé, le menu "filtre" devenait parfois
-incohérent.</li>
-<li>Dans le menu contextuel de la table des transactions, ajout
-d'un item pour pointer l'opération sélectionnée.</li><li><span class="develop">Developpers</span>
-: Passage à une architecture de plugins pour tous les panneaux de la fenêtre principale.</li>
+: Correction de divers bugs mineurs dans le raffraichissement des menus. Certains menus étaient désactivés (ou activés) à tort.</li><li>Ajout de quelques bulles d'aide.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version &nbsp;0.1.16 (17/09/2009)</h2>
+<h2>Version &nbsp;0.1.17 (18/09/2009)</h2><ul><li><span class="bugFix">Correction de bug </span>
+: L'authentification sur le serveur mandataire (proxy) ne fonctionnait
+pas.</li><li><span class="bugFix">Correction de bug </span>
+: Quand un compte était créé, le menu "filtre" devenait parfois
+incohérent.</li><li>Dans le menu contextuel de la table des transactions, ajout
+d'un item pour pointer l'opération sélectionnée.</li><li><span class="develop">Developpers</span>
+: Passage à une architecture de plugins pour tous les panneaux de la fenêtre principale.</li></ul><h2>Version &nbsp;0.1.16 (17/09/2009)</h2>
 <ul>
 <li>Ajout du support des connexions Internet via un proxy.</li>
 <li>Ajout d'un menu contextuel sur la liste des transactions.</li>
