--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -42,7 +42,7 @@ to deduce other informations (especially categories).</li>
 </ol>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> : Some problems in menu items refresh. Some of them were enabled or disabled ... but they'd rather not.</li><li>Add some toolTips.</li>
+<li><span class="bugFix">Bug fixed</span> : Some problems in menu items refresh. Some of them were enabled or disabled ... but they'd rather not.</li><li>Add some toolTips.</li><li>Add an alert dialog when Yapbam is launched with an incompatible old java version (prior to 1.6).</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
