--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -49,7 +49,7 @@ informations (typiquement la catégorie).</li>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li><span class="bugFix">Correction de bug </span>
-: Correction de divers bugs mineurs dans le raffraichissement des menus. Certains menus étaient désactivés (ou activés) à tort.</li><li>Ajout de quelques bulles d'aide.</li>
+: Correction de divers bugs mineurs dans le raffraichissement des menus. Certains menus étaient désactivés (ou activés) à tort.</li><li>Ajout de quelques bulles d'aide.</li><li>Ajout d'un dialogue d'alerte quand Yapbam est lancé avec une ancienne et incompatible version de java (avant 1.6).</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
