--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.1.18 (19/09/2009)</h1>
+<h1>Version &nbsp;0.1.19 (???)</h1>
 <p>This version is a preview with somme missing functionnalities
 and, probably, a lot of bugs.<br>
 You will also find a lot of GUI items without any
@@ -42,11 +42,10 @@ to deduce other informations (especially categories).</li>
 </ol>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> : Some problems in menu items refresh. Some of them were enabled or disabled ... but they'd rather not.</li><li>Add some toolTips.</li><li>Add an alert dialog when Yapbam is launched with an incompatible old java version (prior to 1.6).</li>
-</ul>
+<li><span class="bugFix"><br></span></li></ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.1.17 (1809/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> :
+<h2>Version 0.1.18 (19/09/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> : Some problems in menu items refresh. Some of them were enabled or disabled ... but they'd rather not.</li><li>Add some toolTips.</li><li>Add an alert dialog when Yapbam is launched with an incompatible old java version (prior to 1.6).</li></ul><h2>Version 0.1.17 (18/09/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> :
 The proxy authentication was broken.</li><li><span class="bugFix">Bug fixed</span> :
 When an account was added, sometimes, the filter menu was broken.</li><li>Add a menuItem to check the selected transaction in the
 transactions table contextual menu.</li><li>Oups ! Some wording were not translated in the new Account
