--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.1.18 (19/09/2009)</h1>
+<h1>Version &nbsp;0.1.19 (???)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte beaucoup de bugs. Vous trouverez
@@ -48,12 +48,11 @@ informations (typiquement la catégorie).</li>
 </ol>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li><span class="bugFix">Correction de bug </span>
-: Correction de divers bugs mineurs dans le raffraichissement des menus. Certains menus étaient désactivés (ou activés) à tort.</li><li>Ajout de quelques bulles d'aide.</li><li>Ajout d'un dialogue d'alerte quand Yapbam est lancé avec une ancienne et incompatible version de java (avant 1.6).</li>
-</ul>
+<li><span class="bugFix"></span><br></li></ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version &nbsp;0.1.17 (18/09/2009)</h2><ul><li><span class="bugFix">Correction de bug </span>
+<h2>Version &nbsp;0.1.18 (18/09/2009)</h2><ul><li><span class="bugFix">Correction de bug </span>
+: Correction de divers bugs mineurs dans le raffraichissement des menus. Certains menus étaient désactivés (ou activés) à tort.</li><li>Ajout de quelques bulles d'aide.</li><li>Ajout d'un dialogue d'alerte quand Yapbam est lancé avec une ancienne et incompatible version de java (avant 1.6).</li></ul><h2>Version &nbsp;0.1.17 (18/09/2009)</h2><ul><li><span class="bugFix">Correction de bug </span>
 : L'authentification sur le serveur mandataire (proxy) ne fonctionnait
 pas.</li><li><span class="bugFix">Correction de bug </span>
 : Quand un compte était créé, le menu "filtre" devenait parfois
