--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.2 (???)</h1>
+<h1>Version &nbsp;0.2.2 (09/30/2009)</h1>
 <p>This version is a partial implementation with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
@@ -41,7 +41,7 @@ to deduce other informations (especially categories).</li></ul><ol>
 
 </ol>
 <h2>New in this version</h2>
-<ul><li>Add auto check for Yapbam updates.</li>
+<ul><li>Add auto check for Yapbam updates.</li><li>The "Transactions" menu now remains visible in all the panels.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
