--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.2.2 (30/09/2009)</h1>
+<h1>Version &nbsp;0.2.3 (???)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte quelques bugs. Vous trouverez
@@ -29,9 +29,7 @@ d'être indulgent, ce n'est que pré-version ;-) <br>
 </p>
 <p>Quelques fonctionnalités que j'espère ajouter prochainement :
 </p>
-<ol>
-
-</ol><ul><li>La
+<ul><li>La
 gestion des comptes, des catégories, etc ... (pour l'instant, on peut
 en ajouter, mais pas les éditer ou les supprimer). On peut éditer le
 fichier de données (au format XML) ... mais c'est à vos risques à
@@ -40,17 +38,22 @@ quoi, leur saisie n'aurait aucun intérêt).</li><li>Peut-être la possibilité de c
 données et de le protéger par mot de passe.</li><li>Peut-être une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci serait chargé de completer les descriptions
 possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li></ul><ol>
-
-
-
-</ol>
+informations (typiquement la catégorie).</li></ul>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Ajout de la recherche automatique des mises à jour de Yapbam.</li><li>Le menu&nbsp;"Opérations" reste maintenant visible dans tous les onglets.</li>
+<ul>
+  <li>Ajout de la possibilit&eacute; d'&eacute;diter ou d'ignorer les op&eacute;rations 
+    g&eacute;n&eacute;r&eacute;es par &quot;G&eacute;n&eacute;rer les op&eacute;rations 
+    p&eacute;riodiques&quot;.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version &nbsp;0.2.1 (28/09/2009)</h2><ul><li>Ajout d'un popup menu pour éditer/supprimer/dupliquer &nbsp;les opérations périodiques dans le panneau d'administration.</li><li><span class="bugFix">Correction de bug </span> :&nbsp;Dans
+<h2>Version &nbsp;0.2.2 (30/09/2009)</h2>
+<ul>
+  <li>Ajout de la recherche automatique des mises à jour de Yapbam.</li>
+  <li>Le menu&nbsp;"Opérations" reste maintenant visible dans tous les onglet.</li>
+</ul>
+<h2>Version &nbsp;0.2.1 (28/09/2009)</h2>
+<ul><li>Ajout d'un popup menu pour éditer/supprimer/dupliquer &nbsp;les opérations périodiques dans le panneau d'administration.</li><li><span class="bugFix">Correction de bug </span> :&nbsp;Dans
 le menu contextuel de la table des transactions, l'item pour pointer
 l'opération sélectionnée étaient présent même quand le champ "Relevé"
 était vide.</li></ul><h2>Version &nbsp;0.2.0 (27/09/2009)</h2><ul><li>Ajout de la génération des opérations périodiques. Cette
