--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,7 +16,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.2.3 (???)</h1>
+<h1>Version &nbsp;0.2.3 (01/10/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte quelques bugs. Vous trouverez
@@ -41,9 +41,9 @@ possibles au fur et à mesure de la saisie et en déduire les
 informations (typiquement la catégorie).</li></ul>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout de la possibilit&eacute; d'&eacute;diter ou d'ignorer les op&eacute;rations 
-    g&eacute;n&eacute;r&eacute;es par &quot;G&eacute;n&eacute;rer les op&eacute;rations 
-    p&eacute;riodiques&quot;.</li>
+  <li>Ajout de la possibilité d'éditer ou d'ignorer les opérations 
+    générées par "Générer les opérations 
+    périodiques".</li><li>Ajout de la possibilité de trier la table des opérations et celle des opérations périodiques.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
