--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.3 (10/01/2009)</h1>
+<h1>Version &nbsp;0.2.4 (10/02/2009)</h1>
 <p>This version is a partial implementation with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
@@ -35,12 +35,15 @@ the XML file ... at your own risks.</li><li>Some statistics or charts about cate
 dialog that would be able to complete the description as you type and
 to deduce other informations (especially categories).</li></ul>
 <h2>New in this version</h2>
-<ul>
-  <li>Add the ability to edit or ignore transactions during the periodical transactions 
-    generation process.</li><li>Add the ability to sort the transactions table and the periodic transactions table.</li>
+<ul><li><span class="bugFix">Bug fixed</span> :&nbsp;Under Linux, if
+Yapbam was launch with a right click on the jar file, the preference
+and state files were saved in the user home directory, not in Yapbam
+directory.<br>As Yabam is portable, it was a mistake.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.2.3 (10/01/2009)</h2><ul><li>Add the ability to edit or ignore transactions during the periodical transactions 
+    generation process.</li><li>Add the ability to sort the transactions table and the periodic transactions table.</li></ul>
 <h2>Version 0.2.2 (09/30/2009)</h2>
 <ul>
   <li>Add auto check for Yapbam updates.</li>
