--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,34 +15,33 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version &nbsp;0.2.4 (10/02/2009)</h1>
-<p>This version is a partial implementation with some missing functionnalities
+<h1>Version &nbsp;0.2.5 (10/10/2009)</h1>
+<p>This version is a prerelease with some missing functionnalities
 and, probably, some bugs.<br>
 You will also find some GUI items without any
 tooltip.<br>
 <br>
-Nevertheless it's already useful to manage some bank account (I
+Nevertheless it's already useful to manage your bank accounts (I
 currently use
-it for my own). Feel free to report any bug. Please be indulgent, it's
-still under development ;-) <br>
+it for my own). Feel free to report any bug.<br>
 </p>
-<p>The next functionnalities I hope to add :
+<p>The next functionnalities I plan to add :
 </p>
 <ul><li>Something
-to manage accounts, category ... (currently, you can add them, but not
+to manage payment modes and categories ... (currently, you can add them, but not
 edit or remove what you've added). For now, you have to manually edit
-the XML file ... at your own risks.</li><li>Some statistics or charts about categories.</li><li>Maybe - The ability to compress and encrypt data files.</li><li>Maybe - An auto-complete wizard in the "new transaction"
+the XML file ... at your own risks.</li><li>Some statistics and charts about categories.</li><li>The ability to compress and encrypt data files and store them over the Internet.</li><li>An auto-complete wizard in the "new transaction"
 dialog that would be able to complete the description as you type and
-to deduce other informations (especially categories).</li></ul>
+to deduce other informations (especially categories).</li><li>Maybe the ability to deal with OFX data files ... If a lot of users ask for it.</li></ul>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Bug fixed</span> :&nbsp;Under Linux, if
-Yapbam was launch with a right click on the jar file, the preference
-and state files were saved in the user home directory, not in Yapbam
-directory.<br>As Yabam is portable, it was a mistake.</li>
+<ul><li><span class="bugFix"></span>Add account management.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.2.3 (10/01/2009)</h2><ul><li>Add the ability to edit or ignore transactions during the periodical transactions 
+<h2>Version 0.2.4 (10/02/2009)</h2><ul><li><span class="bugFix">Bug fixed</span> :&nbsp;Under Linux, if
+Yapbam was launch with a right click on the jar file, the preference
+and state files were saved in the user home directory, not in Yapbam
+directory.<br>As Yabam is portable, it was a mistake.</li></ul><h2>Version 0.2.3 (10/01/2009)</h2><ul><li>Add the ability to edit or ignore transactions during the periodical transactions 
     generation process.</li><li>Add the ability to sort the transactions table and the periodic transactions table.</li></ul>
 <h2>Version 0.2.2 (09/30/2009)</h2>
 <ul>
