--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,39 +16,38 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version &nbsp;0.2.4 (02/10/2009)</h1>
+<h1>Version &nbsp;0.2.5 (10/10/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
 manquent quelques fonctionnalités, et qui,
 probablement,&nbsp;comporte quelques bugs. Vous trouverez
 également quelques objets dans l'interface sans bulle d'aide.</p>
-<p>Néanmoins, elle est déjà utilisable pour gérer des comptes
+<p>Néanmoins, elle est déjà utilisable pour gérer vos comptes
 bancaires
 (d'ailleurs je l'utilise pour les miens).<br>
-N'hésitez pas à signaler les bugs que vous pourriez trouver. Merci
-d'être indulgent, ce n'est que pré-version ;-) <br>
+N'hésitez pas à signaler les bugs que vous pourriez trouver.<br>
 </p>
-<p>Quelques fonctionnalités que j'espère ajouter prochainement :
+<p>Quelques fonctionnalités que je prévois d'ajouter prochainement :
 </p>
 <ul><li>La
-gestion des comptes, des catégories, etc ... (pour l'instant, on peut
+gestion des modes de paiement et des catégories (pour l'instant, on peut
 en ajouter, mais pas les éditer ou les supprimer). On peut éditer le
 fichier de données (au format XML) ... mais c'est à vos risques à
 périls.</li><li>Des statistiques et des graphiques sur les catégories (sans
-quoi, leur saisie n'aurait aucun intérêt).</li><li>Peut-être la possibilité de compresser le fichier de
-données et de le protéger par mot de passe.</li><li>Peut-être une auto-complétion dans le dialogue de création
+quoi, leur saisie n'aurait aucun intérêt).</li><li>La possibilité de compresser le fichier de
+données, de le protéger par mot de passe, et de le stocker/lire sur Internet.</li><li>Une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci serait chargé de completer les descriptions
 possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li></ul>
+informations (typiquement la catégorie).</li><li>Peut-être la prise en charge des fichiers au format OFX (issus de Money ou de votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction de bug </span> : Sous
+  <li><span class="bugFix"></span>Ajout de la possibilité de gérer les comptes (changer leur nom et le solde initial) </li></ul>
+<hr>
+<h1>Versions précédentes</h1>
+<h2>Version &nbsp;0.2.4 (02/10/2009)</h2><ul><li><span class="bugFix">Correction de bug </span> : Sous
 Linux, quand Yapbam était démarré avec un clic droit sur le fichier
 jar, les fichiers de préférences et d'état étaient sauvegardés dans le
 répertoire de l'utilisateur (home directory) et pas dans le répertoire
-de Yapbam. Du coup, Yabam n'était pas tout à fait portable. </li></ul>
-<hr>
-<h1>Versions précédentes</h1>
-<h2>Version &nbsp;0.2.3 (01/10/2009)</h2><ul><li>Ajout de la possibilité d'éditer ou d'ignorer les opérations 
+de Yapbam. Du coup, Yabam n'était pas tout à fait portable.</li></ul><h2>Version &nbsp;0.2.3 (01/10/2009)</h2><ul><li>Ajout de la possibilité d'éditer ou d'ignorer les opérations 
     générées par "Générer les opérations 
     périodiques".</li><li>Ajout de la possibilité de trier la table des opérations et celle des opérations périodiques.</li></ul>
 <h2>Version &nbsp;0.2.2 (30/09/2009)</h2>
