--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -42,7 +42,7 @@ la prise en charge des fichiers au format OFX (issus de Money ou de
 votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix"></span><span class="bugFix">Correction de bug </span> : Le popup menu&nbsp;dans l'écran d'administration des comptes comportait de nombreux séparateurs. </li></ul>
+  <li><span class="bugFix"></span><span class="bugFix">Correction de bug </span> : Le popup menu&nbsp;dans l'écran d'administration des comptes comportait de nombreux séparateurs.</li><li><span class="bugFix">Correction de bug </span> : Quand on pressait la touche "Entrée" lors de l'édition d'une date d'opération, la date de valeur n'était pas mise à jour.</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version &nbsp;0.2.5 (10/10/2009)</h2><ul><li><span class="bugFix"></span>Ajout de la possibilité de gérer les comptes (changer leur nom et le solde initial).</li></ul><h2>Version &nbsp;0.2.4 (02/10/2009)</h2><ul><li><span class="bugFix">Correction de bug </span> : Sous
