--- a/src/localization/fr/license.html
+++ b/src/localization/fr/license.html
@@ -22,4 +22,7 @@ française</a>).
 L'écran de démarrage est basé sur une image originale de&nbsp;(<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
 publiée sous license <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
+<br><br>
+Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 </body></html>
