--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -19,4 +19,7 @@ General Public License</a> for more details.<br>
 The splash screen of this application is based on a picture from (<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
 licensed under <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
+<br><br>
+This software use the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 </body></html>
